Fix additional Clang unused warnings https://bugs.webkit.org/show_bug.cgi?id=246366

Reviewed by Darin Adler.

Fix some code warnings from Clang 15 around unused values/code. Fixes
instances of `-Wunused-variable`, `-Wunused-lambda-capture`,
`-Wunused-but-set-variable`, and `-Wunused-function`.

* Source/JavaScriptCore/heap/GCSegmentedArrayInlines.h:
* Source/WebCore/platform/graphics/playstation/SystemFontDatabasePlayStation.cpp:
* Source/WebCore/rendering/RenderLayer.cpp:
* Source/WebKit/NetworkProcess/curl/NetworkDataTaskCurl.cpp:
* Source/WebKit/UIProcess/WebProcessProxy.cpp:
* Source/WebKit/UIProcess/WebsiteData/WebsiteDataStore.cpp:
* Source/WebKit/WebProcess/WebProcess.cpp:

Canonical link: https://commits.webkit.org/255450@main