Source/WebCore/platform/graphics/playstation/SystemFontDatabasePlayStation.cpp
@@ -39,7 +39,7 @@ SystemFontDatabase& SystemFontDatabase::singleton()
     return database.get();
 }
 
-auto SystemFontDatabase::platformSystemFontShorthandInfo(FontShorthand fontShorthand) -> SystemFontShorthandInfo
+auto SystemFontDatabase::platformSystemFontShorthandInfo(FontShorthand) -> SystemFontShorthandInfo
 {
     notImplemented();
     return { WebKitFontFamilyNames::standardFamily, 16, normalWeightValue() };
